--- a/app/src/main/res/layout/liste_client.xml
+++ b/app/src/main/res/layout/liste_client.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
@@ -9,7 +7,9 @@
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/bouton_secondaire"
+        android:padding="10dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -18,11 +18,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/entreprise"/>
+                android:layout_marginRight="5dp"
+                android:text="@string/nom_entreprise_liste"
+                android:textSize="@dimen/texte_defaut"
+                android:textColor="@color/dark_blue" />
             <TextView
                 android:id="@+id/entreprise"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/texte_defaut"
+                android:textColor="@color/black" />
         </TableRow>
 
         <TableRow
@@ -32,11 +37,16 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/adresseClient"/>
+                android:layout_marginRight="5dp"
+                android:text="@string/adresse_entreprise_liste"
+                android:textSize="@dimen/texte_defaut"
+                android:textColor="@color/dark_blue" />
             <TextView
                 android:id="@+id/adresse"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/texte_defaut"
+                android:textColor="@color/black" />
         </TableRow>
 
     </LinearLayout>
