--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,11 +14,36 @@
         android:layout_margin="15dp"
         android:text="@string/ajouter_client" />
 
+    <LinearLayout
+        android:id="@+id/erreurPasDeClient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_marginHorizontal="25dp"
+        android:gravity="center"
+        android:visibility="gone">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:src="@android:drawable/ic_dialog_alert"
+            android:contentDescription="@string/erreur_aucun_client"
+            app:tint="@android:color/holo_orange_light" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textSize="@dimen/detail_client_taille_titres"
+            android:text="@string/erreur_aucun_client"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_clients"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="@dimen/liste_client_marge_haute"
         android:layout_marginHorizontal="13dp" />
 
 </LinearLayout>
